--- a/src/src/styles/style.less
+++ b/src/src/styles/style.less
@@ -1,5 +1,11 @@
 @import "../../node_modules/twitter-bootstrap-3.0.0/less/bootstrap.less";
 
+@fa-font-path: "../font";
+@import "../../node_modules/font-awesome/less/variables.less";
+@import "../../node_modules/font-awesome/less/path.less";
+@import "../../node_modules/font-awesome/less/core.less";
+@import "../../node_modules/font-awesome/less/icons.less";
+
 tr.library-info,
 th {
   cursor: pointer;
